2013-01-15  Charlie Zender  <zender@uci.edu>

	* Safeguard potential illegal memory access in nco_mk_xtr() string manipulation

2013-01-14  Charlie Zender  <zender@uci.edu>

	* Fix bug introduced in 4.2.1 that causes ncea to break when handling
	files that do not contain a record dimension. Thanks to Martin Otte
	for reporting the bug and providing a working fix.
	http://nco.sf.net#bug_ncea_rec_var

	* Memory error in nco_mk_xtr() triggers segfaults in autoconf build

	* Remove new regression tests that are fragile, i.e., whose answers change as in.cdl and in_grp.cdl change

2013-01-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3: anchoring, recursion, ncra bugfix, ncrename
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Document union-mode and intersection-mode in nco.texi, and give
	examples with simultaneous anchoring and recursion

	* Add --ram_all to remaining usage strings in nco_ctl.c

	* Reorganize nco_grp_var_mk_trv2()

	* Rework details of NCO GSL code: use mss_val as argument name,
	eliminate C99/C++ "//" comment syntax, and attribute copyrights in original GSL code

2013-01-12  Charlie Zender  <zender@uci.edu>

	* Set is_crd_var to True in nco_var_fll() when variable referenced
	in either CF "bounds" or "coordinates" attributes. Effectively,
	the only consequence of this is that the arithmetic operators now
	treat CF coordinates like basic coordinates in all ways. More
	consistent to have time_bnds be an average, like time, rather than
	a total when -y ttl is specified. This simplifies nco_var_lst_dvd()
	which no longer separately checks for CF coordinates.

	* All regression tests pass on netCDF4-enabled NCO.

	* Enable new extraction maker nco_mk_xtr() version of ncks. This
	removes most explicit dependencies on netCDF format from main.c.
	MM3 temporarily disabled.
